--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,6 +10,8 @@
   <title>Wedding Gallery</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=GUr9QmddhC6I&format=png&color=000000" type="image/png">
+  <link rel="icon" href="https://img.icons8.com/?size=100&id=GUr9QmddhC6I&format=png&color=000000" type="image/png">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
