--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wedding Gallery</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=GUr9QmddhC6I&format=png&color=000000" type="image/png">
+  <link rel="icon" href="https://img.icons8.com/?size=100&id=GUr9QmddhC6I&format=png&color=000000" type="image/png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/index_style.css">
   <link rel="icon" type="image/x-icon" href="/static_img/favicon.ico">
